k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: glpi-app
  name: glpi-app
  namespace: dev-glpi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: glpi-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: glpi-app
    spec:
      containers:
      - image: abrantedevops/glpi_nginx:latest
        name: glpi-app
        resources: {}
        ports:
        - containerPort: 80
        - containerPort: 443
status: {}
