k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-service
  name: app-service
  namespace: dev-glpi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: glpi-app
  type: ClusterIP
status:
  loadBalancer: {}
